fixed button html/ reduce arr method

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="double">Double Money</button>
         <button id="show-millionaires">Show only millionaires</button>
         <button id="sort">Sort by Richest</button>
-        <buton id="calculate-wealth">Calculate entire wealth</buton>
+        <button id="calculate-wealth">Calculate entire wealth</button>
       </aside>
       <main id="main">
         <h2><strong>Person</strong> Wealth</h2>
